# django-sqlite

./: .readthedocs.yaml  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.md  license.md
src/django_sqlite/: __init__.py  apps.py
