[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django_sqlite"
description = "Miscellaneous Django utilities for working with SQLite databases"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Django", "SQLite"]
authors = [
    { name = "Afonso Silva", email = "ajcerejeira@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = ["Django>=3.2"]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/ajcerejeira/django-sqlite"
repository = "https://github.com/ajcerejeira/django-sqlite.git"
issues = "https://github.com/ajcerejeira/django-sqlite/issues"

[tool.setuptools_scm]
