[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django_sqlite"
description = "Miscellaneous Django utilities for working with SQLite databases"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Django", "SQLite"]
authors = [
    { name = "Afonso Silva", email = "ajcerejeira@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = ["Django>=3.2"]
dynamic = ["version"]

[project.optional-dependencies]
docs = ["furo", "myst-parser", "sphinx"]
lint = ["black", "ruff", "mypy", "django-stubs[compatible-mypy]"]

[project.urls]
homepage = "https://github.com/ajcerejeira/django-sqlite"
repository = "https://github.com/ajcerejeira/django-sqlite.git"
issues = "https://github.com/ajcerejeira/django-sqlite/issues"

[tool.setuptools_scm]

[tool.ruff]
select = [
    "B",    # bugbear       https://beta.ruff.rs/docs/rules/#flake8-bugbear-b
    "D",    # pydocstyle    https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "DJ",   # django        https://beta.ruff.rs/docs/rules/#flake8-django-dj
    "E",    # pycodestyle   https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "F",    # PyFlakes      https://beta.ruff.rs/docs/rules/#pyflakes-f>
    "I",    # isort         https://beta.ruff.rs/docs/rules/#isort-i
    "N",    # pep8-naming   https://beta.ruff.rs/docs/rules/#pep8-naming-n
    "S",    # bandit        https://beta.ruff.rs/docs/rules/#flake8-bandit-s
    "W",    # pycodestyle   https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
]
line-length = 88

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
files = ["docs/**/*.py", "src/**/*.py", "tests/**/*.py"]
namespace_packages = false
strict = true
warn_unreachable = true
