[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "django_sqlite"
description = "Miscellaneous Django utilities for working with SQLite databases"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Django", "SQLite"]
authors = [
    { name = "Afonso Silva", email = "ajcerejeira@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = ["Django>=5.2"]
dynamic = ["version"]

[dependency-groups]
dev = [
    "furo",
    "myst-parser",
    "ruff",
    "sphinx",
    "ty",
]

[project.urls]
homepage = "https://github.com/ajcerejeira/django-sqlite"
repository = "https://github.com/ajcerejeira/django-sqlite.git"
issues = "https://github.com/ajcerejeira/django-sqlite/issues"

[tool.setuptools_scm]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "ANN",  # annotations   https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "B",    # bugbear       https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "D",    # pydocstyle    https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "DJ",   # django        https://docs.astral.sh/ruff/rules/#flake8-django-dj
    "E",    # pycodestyle   https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
    "F",    # PyFlakes      https://docs.astral.sh/ruff/rules/#pyflakes-f>
    "I",    # isort         https://docs.astral.sh/ruff/rules/#isort-i
    "PYI",  # pyi           https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "N",    # pep8-naming   https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "S",    # bandit        https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "W",    # pycodestyle   https://docs.astral.sh/ruff/rules/#pycodestyle-e-w
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ty.rules]
missing-type-argument = "error"
possibly-unresolved-reference = "warn"
